--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,6 +1,6 @@
 body, html {
-    height: 100%;
-    -webkit-tap-highlight-color: transparent;
+	height: 100%;
+	-webkit-tap-highlight-color: transparent;
 }
 
 .page {
@@ -8,7 +8,6 @@ body, html {
 	overflow-y: auto;
 	padding-top: 20px;
 }
-
 .my-icon {
 	background-size: 100%!important;
 }
@@ -34,5 +33,57 @@ body, html {
 .weui-tabbar__item.weui-bar__item_on .weui-tabbar__icon,
 .weui-tabbar__item.weui-bar__item_on .weui-tabbar__icon>i,
 .weui-tabbar__item.weui-bar__item_on .weui-tabbar__label {
-    color: #09b78d;
+	color: #09b78d;
+}
+
+/* === navbar === */
+.weui-navbar+.weui-tab__panel {
+	padding-top: 44px;
+}
+.weui-navbar+.weui-tab__panel>.page {
+	padding-top: 0px;
+}
+.weui-navbar {
+    height: 44px;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    font-size: 17px;
+    /* position: relative;
+    margin: 0;
+    z-index: 500;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); */
+}
+.weui-navbar-inner {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	padding: 0 8px;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+}
+.weui-navbar-hide {
+	display: none;
+}
+
+/* === f7-icons extra === */
+.f7-icons {
+	margin: 1px 5px;
+}
+.f7-icons-text {
+	vertical-align: top;
 }
