尝试折腾了一下jquery和jquery-weui，失败了，还原回vue-swipe插件，基本实现功能，还需调整

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -144,6 +144,7 @@ body, html {
 /* === 底部工具条 === */
 .weui-navbar+.weui-tab__panel {
 	padding-top: 44px;
+  padding-bottom: 50px;
 }
 .weui-navbar+.weui-tab__panel>.page {
 	padding-top: 0px;
