使用原始方式引入jquery-weui的photoBrowser插件，替换vue-swipe解决方案

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -193,3 +193,8 @@ body, html {
 .f7-icons-text {
 	vertical-align: top;
 }
+
+/* jquery-weui PhotoBrowser置于最前 */
+.weui-photo-browser-modal {
+  z-index: 1000;
+}
