以vue形式引入weui.js，去掉重复引用的css，解决换页时weui的组件不关闭的bug

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -212,6 +212,12 @@ body, html {
   opacity: 1;
 }
 
+/* jquery-weui 影响的原始weui样式 */
+.weui-dialog, .weui-toast {
+  opacity: 1;
+  visibility: visible;
+}
+
 /* 评论条 */
 .commentbar {
   /* height: 44px; */
