解决一个bug，完善一个功能
解决班级动态页删除评论弹出层在页面切换时不关闭的bug
完善了新建班级动态提交的代码（未完成）
图片服务器出现问题，暂时无法跑通
班级动态页的评论框还未做页面切换关闭处理

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -207,17 +207,20 @@ body, html {
   z-index: 1000;
 }
 
+/* jquery-weui 影响的原始weui样式 */
 .weui-mask {
   visibility: visible;
   opacity: 1;
 }
-
-/* jquery-weui 影响的原始weui样式 */
 .weui-dialog, .weui-toast {
   opacity: 1;
   visibility: visible;
 }
-
+/* .weui-toptips {
+  z-index: 5000;
+  opacity: 1;
+  transition: opacity .3s;
+} */
 /* 评论条 */
 .commentbar {
   /* height: 44px; */
@@ -274,4 +277,12 @@ body, html {
 .icon-schedule {
   background: url('/static/imgs/icon-schedule.png') no-repeat;
   background-size: contain;
+}
+
+/* TopTips的颜色 */
+.xdf_orange {
+  background-color: darkorange;
+}
+.xdf_green {
+  background-color: #09b78d;
 }
