--- a/static/css/app.css
+++ b/static/css/app.css
@@ -280,7 +280,7 @@ body, html {
   height: 25px;
   width: 25px;
   display: inline-block;
-  margin-right: 8px;
+  /* margin-right: 8px; */
 }
 .icon-gender {
   background: url('/static/imgs/icon-gender.png') no-repeat;
