维护登录、通讯录
登录：增加必填校验
通讯录：查询功能实现，更换关键字
通讯录-查询页：增加菜单
通讯录-新增页：实现
通讯录：删除功能实现

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -76,8 +76,8 @@ body, html {
 .weui-cell__bd {
   font-size: 15px;
 }
-.weui-cell__ft,
-.weui-cell__ft i {
+/*.weui-cell__ft i 去掉i标签的控制，否则污染报错提示标志的大小*/
+.weui-cell__ft {
   font-size: 14px;
 }
 
