--- a/static/css/app.css
+++ b/static/css/app.css
@@ -10,6 +10,7 @@ body, html {
 .page {
 	height: 100%;
 	overflow-y: auto;
+  /* background: #fbf9fe; */
 }
 .page__title {
     padding: 40px 15px 20px 15px;
@@ -46,6 +47,10 @@ body, html {
 }
 .margin-v3 {
     margin: 3px 0;
+}
+
+.center {
+  text-align: center;
 }
 
 /* weui-cells容器上方去掉画线 */
@@ -300,6 +305,11 @@ body, html {
 }
 .icon-schedule {
   background: url('/static/imgs/icon-schedule.png') no-repeat;
+  background-size: contain;
+}
+
+.icon-phone {
+  background: url('/static/imgs/icon-phone.png') no-repeat;
   background-size: contain;
 }
 
