--- a/static/css/app.css
+++ b/static/css/app.css
@@ -320,3 +320,29 @@ body, html {
 .xdf_green {
   background-color: #09b78d;
 }
+
+/* 固定到顶部 */
+.page .fixed-top {
+  height: 41px;
+  margin-top: 0px;
+}
+.page .fixed-top.weui-cells:after {
+  content: none;
+}
+.page .fixed-top .weui-cell {
+  /* position: fixed; */
+  z-index: 510;
+  width: calc(100% - 30px);
+  height: 22px;
+  background: #f9f9f9;
+}
+.page .fixed-top .weui-cell:after {
+  content: " ";
+  width: 100%;
+  height: 1px;
+  background: #ddd;
+  /* box-shadow: 0 2px 15px 1px rgba(0, 0, 0, 0.1); */
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
