--- a/static/css/app.css
+++ b/static/css/app.css
@@ -2,6 +2,9 @@ body, html {
 	height: 100%;
 	-webkit-tap-highlight-color: transparent;
 }
+html {
+  overflow: hidden;
+}
 
 /* === 通用 === */
 .pull-right {
