登出时清除classList数据，改为默认使用uls中的classList，限制选择班级菜单最大高度

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -286,6 +286,11 @@ html {
   color: #999;
 }
 
+/* 单选菜单 最大高度限制 */
+.weui-actionsheet__menu {
+  max-height: 217px;
+  overflow-y: auto;
+}
 
 /* 各种图标 */
 .icon {
